--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
   "scripts": {
     "dev": "solid-start dev",
     "build": "solid-start build",
-    "start": "solid-start start"
+    "start": "solid-start start",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "type": "module",
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.3.1",
+    "@storybook/addon-interactions": "^7.3.1",
+    "@storybook/addon-links": "^7.3.1",
+    "@storybook/blocks": "^7.3.1",
+    "@storybook/testing-library": "^0.2.0",
     "@types/node": "^18.16.19",
     "esbuild": "^0.14.54",
     "postcss": "^8.4.26",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "solid-start-node": "^0.3.0",
+    "storybook": "^7.3.1",
+    "storybook-solidjs": "^1.0.0-beta.2",
+    "storybook-solidjs-vite": "^1.0.0-beta.2",
     "typescript": "^4.9.5",
     "vite": "^4.4.6"
   },
