--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "build": "solid-start build",
     "start": "solid-start start",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prepare": "panda codegen"
   },
   "type": "module",
   "devDependencies": {
+    "@pandacss/dev": "^0.11.1",
     "@storybook/addon-essentials": "^7.3.1",
     "@storybook/addon-interactions": "^7.3.1",
     "@storybook/addon-links": "^7.3.1",
