--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "devDependencies": {
     "@pandacss/dev": "^0.11.1",
+    "@storybook/addon-docs": "^7.3.1",
     "@storybook/addon-essentials": "^7.3.1",
     "@storybook/addon-interactions": "^7.3.1",
     "@storybook/addon-links": "^7.3.1",
